--- a/arch-common-biz/pom.xml
+++ b/arch-common-biz/pom.xml
@@ -137,5 +137,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
     </dependencies>
 </project>
